--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 	<p>Hello World!</p>
 	<p>This is a new paragraph!</p>
 	<p>This is a third paragraph!</p>
+
+	<script src="script.js"></script>
        </body>
       </html>
 	
