--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
  <head>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="style/style.css">
  </head>
  <body>
 	<p>Hello World!</p>
 	<p>This is a new paragraph!</p>
 	<p>This is a third paragraph!</p>
 
-	<script src="script.js"></script>
+	<script src="scripts/script.js"></script>
        </body>
       </html>
 	
